[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/components/HoldComponent.gd" type="Script" id=1]
[ext_resource path="res://scenes/components/BaseComponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Light.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sounds/hold_hold.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/hold_release.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/hold_buildup.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/hold_laser.ogg" type="AudioStream" id=7]

[node name="HoldComponent" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="Light" parent="." index="2" instance=ExtResource( 3 )]
key = "S"

[node name="HoldTimer" type="Timer" parent="." index="3"]
one_shot = true

[node name="BuildupFadeout" type="Tween" parent="." index="4"]

[node name="Laser" type="AudioStreamPlayer2D" parent="." index="5"]
stream = ExtResource( 7 )

[node name="Buildup" type="AudioStreamPlayer2D" parent="." index="6"]
stream = ExtResource( 6 )

[node name="Release" type="AudioStreamPlayer2D" parent="." index="7"]
stream = ExtResource( 5 )

[node name="Hold" type="AudioStreamPlayer2D" parent="." index="8"]
stream = ExtResource( 4 )

[connection signal="timeout" from="HoldTimer" to="." method="_on_HoldTimer_timeout"]
